--- a/projects/icc/tabs/src/mat/tab-body.html
+++ b/projects/icc/tabs/src/mat/tab-body.html
@@ -6,5 +6,5 @@
   [class.mat-tab-body-content-right]="_position === 'right'"
   [class.mat-tab-body-content-can-animate]="_position === 'center' || _previousPosition === 'center'"
 >
-  <ng-template matTabBodyHost></ng-template>
+  <ng-template iccTabBodyHost></ng-template>
 </div>
